overflow bug

--- a/themes/luc-v1/assets/sass/styles.scss
+++ b/themes/luc-v1/assets/sass/styles.scss
@@ -11,7 +11,9 @@
 @import "play.scss";
 @import "animate.scss";
 
+html,
 body {
+  overflow: hidden;
   * {
     box-sizing: border-box;
   }
